--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -17,11 +16,7 @@
          </font>
       </Label>
       <ListView fx:id="accountsList" layoutX="73.0" layoutY="125.0" prefHeight="294.0" prefWidth="454.0" style="-fx-background-color: #18181b;" />
-      <ImageView fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@icons/logo.png" />
-         </image>
-      </ImageView>
+      <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="542.0" mnemonicParsing="false" onAction="#chooseAccount" onMouseClicked="#chooseAccount" style="-fx-background-color: #5c4de3;" text="Choose accunt" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
