--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -32,11 +31,7 @@
                <children>
                   <ToolBar prefHeight="69.0" prefWidth="220.0" GridPane.rowIndex="1">
                      <items>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@icons/brightness.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView id="brightness" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
                         <Label text="Theme selector:" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
@@ -73,11 +68,7 @@
                <children>
                   <ToolBar prefHeight="69.0" prefWidth="220.0" GridPane.rowIndex="1">
                      <items>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@icons/appearance.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView id="appearance" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
                         <Label text="Appearance:" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
@@ -109,11 +100,7 @@
                <children>
                   <ToolBar prefHeight="60.0" prefWidth="249.0" GridPane.rowIndex="1">
                      <items>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@icons/edit.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView id="edit" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
                         <Label text="Profile settings:" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
@@ -135,11 +122,7 @@
          <children>
             <ToolBar onMouseClicked="#logOut" prefHeight="76.0" prefWidth="185.0">
                <items>
-                  <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@icons/logout.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView id="logout" fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
                   <Label text="Log out" textFill="WHITE">
                      <font>
                         <Font size="20.0" />
