--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
@@ -8,40 +8,33 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="140.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="229.0" minWidth="10.0" prefWidth="95.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="252.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="184.0" />
+        <ColumnConstraints hgrow="NEVER" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="100" />
+      <ColumnConstraints hgrow="SOMETIMES" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="71.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
     </rowConstraints>
-    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" onMouseClicked="#goAccount" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2">
+    <ImageView fx:id="avatar" fitHeight="64.0" fitWidth="64.0" onMouseClicked="#goAccount" preserveRatio="true" GridPane.rowSpan="2">
         <Image url="@darkThemeIcons/user.png" />
+      <GridPane.margin>
+         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+      </GridPane.margin>
     </ImageView>
-    <Label fx:id="displayName" text="Label" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
-        <GridPane.margin>
-          <Insets top="5.0" />
-        </GridPane.margin>
-        <font>
-          <Font size="16.0" />
-        </font>
-    </Label>
-    <Label fx:id="userName" onMouseClicked="#goAccount" text="\@" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+    <Label fx:id="userName" onMouseClicked="#goAccount" text="\@username" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.valignment="BOTTOM">
         <GridPane.margin>
           <Insets bottom="5.0" />
         </GridPane.margin>
-        <font>
-          <Font name="Inter Regular" size="16.0" />
-        </font>
     </Label>
-   <Button fx:id="followBtn" mnemonicParsing="false" onAction="#followAccount" prefHeight="29.0" prefWidth="95.0" text="Follow" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowSpan="2" GridPane.valignment="CENTER">
-      <font>
-         <Font name="System Bold" size="14.0" />
-      </font>
+    <Label fx:id="displayName" onMouseClicked="#goAccount" text="Display Name" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
+        <GridPane.margin>
+          <Insets bottom="10.0" />
+        </GridPane.margin>
+    </Label>
+   <Button fx:id="followBtn" onAction="#followAccount" prefWidth="95.0" text="Follow" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowSpan="2">
    </Button>
 </GridPane>
