--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -2,114 +2,76 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="186.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="24.999998092651367" prefHeight="46.33333206176758" vgrow="ALWAYS" />
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="94.0" vgrow="ALWAYS" />
-        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="57.0" vgrow="ALWAYS" />
+        <RowConstraints prefHeight="48.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="94.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="57.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="1" GridPane.columnSpan="3">
-        <opaqueInsets>
-            <Insets />
-        </opaqueInsets>
-        <Label fx:id="displayName" onMouseClicked="#goAccount" text="Display Name" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="16.0" />
-            </font>
-            <HBox.margin>
-                <Insets />
-            </HBox.margin>
-        </Label>
-        <Label fx:id="userName" onMouseClicked="#goAccount" text="\@username" textFill="#ffffffc2">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Label>
-      <Region maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" HBox.hgrow="ALWAYS" />
-        <Label fx:id="date" alignment="TOP_LEFT" text="date" textFill="#ffffffc2">
-            <font>
-                <Font size="14.0" />
-            </font>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-        </Label>
-      <GridPane.margin>
-         <Insets right="10.0" />
-      </GridPane.margin>
+        <Label fx:id="displayName" onMouseClicked="#goAccount" text="Display Name" />
+        <Label fx:id="userName" onMouseClicked="#goAccount" text="\@username" />
+        <Region HBox.hgrow="ALWAYS" />
+        <Label fx:id="date" text="date" />
+        <GridPane.margin>
+            <Insets right="10.0" />
+        </GridPane.margin>
     </HBox>
-    <ImageView id="bookmark" fx:id="bookmarkBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-        <GridPane.margin>
-            <Insets />
-        </GridPane.margin>
-    </ImageView>
-    <ImageView id="like" fx:id="likeBtn" fitHeight="20.0" fitWidth="20.0" nodeOrientation="INHERIT" onMouseClicked="#onLikeBtn" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <ImageView id="bookmark" fx:id="bookmarkBtn" fitHeight="20.0" fitWidth="20.0" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+    <ImageView id="like" fx:id="likeBtn" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#onLikeBtn" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets right="50.0" />
         </GridPane.margin>
     </ImageView>
-    <Label fx:id="like" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <Label fx:id="like" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets left="30.0" />
         </GridPane.margin>
     </Label>
-    <ImageView id="retweet" fx:id="retweetBtn" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#onRetootBtn" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <ImageView id="retweet" fx:id="retweetBtn" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#onRetootBtn" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets right="50.0" />
         </GridPane.margin>
     </ImageView>
-    <Label fx:id="retweet" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <Label fx:id="retweet" text="0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets left="30.0" />
         </GridPane.margin>
     </Label>
-    <ImageView id="comments" fx:id="commentBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <ImageView id="comments" fx:id="commentBtn" fitHeight="20.0" fitWidth="20.0" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets right="50.0" />
         </GridPane.margin>
     </ImageView>
-    <Label fx:id="comment" prefHeight="17.0" prefWidth="30.0" text="0" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <Label fx:id="comment" text="0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets left="30.0" />
         </GridPane.margin>
     </Label>
-    <ImageView fx:id="avatar" fitHeight="60.0" fitWidth="60.0" onMouseClicked="#goAccount" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+    <ImageView fx:id="avatar" fitHeight="60.0" fitWidth="60.0" onMouseClicked="#goAccount" preserveRatio="true" GridPane.rowIndex="1">
         <GridPane.margin>
             <Insets bottom="90.0" left="5.0" />
         </GridPane.margin>
-      <image>
-         <Image url="@darkThemeIcons/user.png" />
-      </image>
     </ImageView>
-   <TextFlow maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
-      <opaqueInsets>
-         <Insets />
-      </opaqueInsets>
-      <GridPane.margin>
-         <Insets top="10.0" />
-      </GridPane.margin>
-      <children>
-         <Text id="content" fx:id="contentText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      </children>
-   </TextFlow>
+    <TextFlow maxHeight="Infinity" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+        <GridPane.margin>
+            <Insets top="10.0" />
+        </GridPane.margin>
+        <Text GridPane.vgrow="ALWAYS" id="content" fx:id="contentText" text="Text" />
+    </TextFlow>
 </GridPane>
