--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
@@ -15,43 +15,36 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="723.0" prefWidth="600.0"
-      xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="eus.ehu.chismosas.mastodonfx.presentation.SettingsController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="723.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.SettingsController">
     <HBox prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: #18181b;">
         <GridPane prefHeight="183.0" prefWidth="600.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="204.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="412.0" minWidth="10.0" prefWidth="396.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="204.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="412.0" minWidth="10.0" prefWidth="396.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <ToolBar prefHeight="69.0" prefWidth="220.0" style="-fx-background-color: #18181b;"
-                     GridPane.rowIndex="1">
+            <ToolBar prefHeight="69.0" prefWidth="220.0" style="-fx-background-color: #18181b;" GridPane.rowIndex="1">
                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@icons/brightness.png"/>
+                    <Image url="@icons/brightness.png" />
                 </ImageView>
-                <Label text="Theme selector:" textFill="WHITE">
+                <Label text="%Theme selector:" textFill="WHITE">
                     <font>
-                        <Font size="16.0"/>
+                        <Font size="16.0" />
                     </font>
                 </Label>
             </ToolBar>
-            <RadioButton fx:id="darkBtn" mnemonicParsing="false" onAction="#selectDarkTheme" selected="true"
-                         text="DARK" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                         GridPane.rowIndex="1">
+            <RadioButton fx:id="darkBtn" mnemonicParsing="false" onAction="#selectDarkTheme" selected="true" text="%DARK" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </RadioButton>
-            <RadioButton fx:id="lightBtn" mnemonicParsing="false" onAction="#selectLightTheme" text="LIGHT"
-                         textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                         GridPane.rowIndex="2">
+            <RadioButton fx:id="lightBtn" mnemonicParsing="false" onAction="#selectLightTheme" text="%LIGHT" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </RadioButton>
         </GridPane>
@@ -59,29 +52,27 @@
     <HBox prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: #18181b;">
         <GridPane prefHeight="183.0" prefWidth="600.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="188.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="392.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="188.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="392.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <ToolBar prefHeight="69.0" prefWidth="220.0" style="-fx-background-color: #18181b;"
-                     GridPane.rowIndex="1">
+            <ToolBar prefHeight="69.0" prefWidth="220.0" style="-fx-background-color: #18181b;" GridPane.rowIndex="1">
                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@icons/appearance.png"/>
+                    <Image url="@icons/appearance.png" />
                 </ImageView>
-                <Label text="Appearance:" textFill="WHITE">
+                <Label text="%Appearance:" textFill="WHITE">
                     <font>
-                        <Font size="20.0"/>
+                        <Font size="20.0" />
                     </font>
                 </Label>
             </ToolBar>
-            <Label text="WIP" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                   GridPane.rowIndex="1">
+            <Label text="WIP" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                 <font>
-                    <Font size="20.0"/>
+                    <Font size="20.0" />
                 </font>
             </Label>
         </GridPane>
@@ -89,48 +80,44 @@
     <HBox prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: #18181b;">
         <GridPane prefHeight="183.0" prefWidth="600.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="188.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="392.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="188.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="392.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <ToolBar prefHeight="60.0" prefWidth="249.0" style="-fx-background-color: #18181b;"
-                     GridPane.rowIndex="1">
+            <ToolBar prefHeight="60.0" prefWidth="183.0" style="-fx-background-color: #18181b;" GridPane.rowIndex="1">
                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@icons/edit.png"/>
+                    <Image url="@icons/edit.png" />
                 </ImageView>
-                <Label text="Profile settings:" textFill="WHITE">
+                <Label text="%Profile settings:" textFill="WHITE">
                     <font>
-                        <Font size="16.0"/>
+                        <Font size="16.0" />
                     </font>
                 </Label>
             </ToolBar>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #18181b;"
-                     GridPane.columnIndex="1" GridPane.rowIndex="1">
-                <TextField fx:id="usernameField" prefHeight="25.0" prefWidth="239.0"
-                           promptText="Change your username"/>
-                <Button fx:id="usernameBtn" mnemonicParsing="false" onAction="#changeUsername" text="Done"/>
+            <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #18181b;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <TextField fx:id="usernameField" prefHeight="25.0" prefWidth="239.0" promptText="%Change your username" />
+                <Button fx:id="usernameBtn" mnemonicParsing="false" onAction="#changeUsername" text="%Done" />
             </ToolBar>
         </GridPane>
     </HBox>
     <HBox prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: #18181b;">
-        <ToolBar onMouseClicked="#logOut" prefHeight="76.0" prefWidth="185.0"
-                 style="-fx-background-color: #18181b;">
+        <ToolBar onMouseClicked="#logOut" prefHeight="76.0" prefWidth="185.0" style="-fx-background-color: #18181b;">
             <HBox.margin>
-                <Insets left="165.0"/>
+                <Insets left="165.0" />
             </HBox.margin>
             <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@icons/logout.png"/>
+                <Image url="@icons/logout.png" />
             </ImageView>
-            <Label text="Log out" textFill="WHITE">
+            <Label text="%Log out" textFill="WHITE">
                 <font>
-                    <Font size="20.0"/>
+                    <Font size="20.0" />
                 </font>
                 <padding>
-                    <Insets left="10.0"/>
+                    <Insets left="10.0" />
                 </padding>
             </Label>
         </ToolBar>
